# Multi-Platform-OpenGL-App

./: .gitignore  README.md  git-sync-deps  sync_skia.bash
Android-OS/: gradle.properties  settings.gradle
Android-OS/app/: build.gradle
Android-OS/app/src/androidTest/java/smallville7123/multi/app/open/gl/skia/: ExampleInstrumentedTest.java
Android-OS/app/src/main/: AndroidManifest.xml
Android-OS/app/src/main/cpp/: CMakeLists.txt
Android-OS/app/src/main/cpp/host/: SkiaRenderer.cpp  SkiaRenderer.h  main.cpp  skia_app.cpp  skia_app.h
Android-OS/app/src/main/java/smallville7123/multi/app/open/gl/skia/: MainActivity.java
Android-OS/app/src/main/res/values/: strings.xml  themes.xml
Android-OS/app/src/main/res/values-night/: themes.xml
Android-OS/app/src/test/java/smallville7123/multi/app/open/gl/skia/: ExampleUnitTest.java
Android-OS/gradle/wrapper/: gradle-wrapper.properties
Windows-OS/: CMakeLists.txt  main.cpp  win_msg.cpp  win_msg.h
